--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Falguni</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#services">Services</a> <!-- Fixed typo -->
-            <a href="#portfolio">Portfolio</a>
+            <a href="#education">Education</a> <!-- Fixed typo -->
+            <a href="#portfolio">Project</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -33,10 +33,14 @@
             <h1>Falguni Timande</h1>
             <h3>And I'm a <span class="multiple-text"> </span></h3>
             <p>Undergrad Computer Science Student | ACES | Android Developer @sit Savitribai Phule Pune University Pune,
-                Maharashtra, India. Aspiring to join a dynamic tech team where my skills in Android development, Python,
+                Maharashtra, India.
+
+            <p>
+                Aspiring to join a dynamic tech team where my skills in Android development, Python,
                 and web technologies
                 can be harnessed to create cutting-edge solutions and enhance user experiences, while continuously
                 learning and evolving in the ever-changing tech landscape.
+            </p>
 
             </p>
             <div class="social-media">
@@ -49,13 +53,13 @@
         </div>
 
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img src="images/home2.jpg" alt="">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+            <img src="images/about2.jpg" alt="">
         </div>
 
         <div class="about-content">
@@ -64,19 +68,110 @@
             </h2>
             <h3>Frontend Developer</h3>
             <p>Key Strengths:
-
-                - Proficient Android developer with expertise in [specific skills, e.g., Java, Kotlin, Android Studio]
+            <p>
+                - Proficient Android developer with expertise in [specific skills, e.g., Java, Kotlin, Android
+                Studio]<br>
                 - Skilled Python programmer with experience in [specific areas, e.g., data analysis, machine learning,
-                web development]
+                web development]<br>
                 - Well-versed in web technologies, including [specific skills, e.g., HTML/CSS, JavaScript, frameworks
-                like React/Angular]
-                - Strong understanding of software development life cycles and agile methodologies
+                like React/Angular]<br>
+                - Strong understanding of software development life cycles and agile methodologies<br>
                 - Excellent problem-solving skills, with a keen eye for detail and dedication to quality
             </p>
+
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
 
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Journey</span>
+        </h2>
+
+        <div class="education-row">
+            <div class="education-column">
+                <h3 class="title">Education</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="education-column">
+                <h3 class="title">Experience</h3>
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
+                            <h3>---------------</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque sed, repellendus sunt eos
+                                consequatur reiciendis ducimus nulla, vel natus animi accusamus, itaque quam optio
+                                ratione architecto iure. Aliquam, dolorum error?
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+    </section>
+    <!-- 
     <section class="services" id="services">
         <h2 class="heading">Our <span>Services</span>
         </h2>
@@ -114,7 +209,7 @@
 
         </div>
     </section>
-
+-->
 
     <section class="services section">
         <h2 class="section__title-2">
